# practice_restful

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  README.txt
restful_01_sample/: CMakeLists.txt
restful_01_sample/sample_01_make_library/: CMakeLists.txt
restful_01_sample/sample_01_make_library/set_lib_name/: CMakeLists.txt  for_dll.cpp  for_dll.hpp  set_lib_name.cpp  set_lib_name.hpp
restful_01_sample/sample_02_use_library/: CMakeLists.txt
restful_01_sample/sample_02_use_library/set_exe_name/: CMakeLists.txt  set_exe_name.cpp  set_exe_name.hpp
restful_01_sample/sample_02_use_library_s/: CMakeLists.txt
restful_01_sample/sample_02_use_library_s/use_library_s/: CMakeLists.txt  use_library_s.cpp
restful_01_sample/sample_03_use_library_c/: CMakeLists.txt
restful_01_sample/sample_03_use_library_c/use_library_c/: CMakeLists.txt  use_library_c.cpp  use_library_c.hpp
